src/objects/AreaCodeTranslation__mdt.object
<CustomObject>
    <fields>
        <fullName>MD__c</fullName>
        <label>Market discriminator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Code10__c</fullName>
        <label>Mobile Code10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Code11__c</fullName>
        <label>Mobile Code11</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Code12__c</fullName>
        <label>Mobile Code12</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_EN10__c</fullName>
        <label>Phone_EN10</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_EN11__c</fullName>
        <label>Phone_EN11</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_EN12__c</fullName>
        <label>Phone_EN12</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_TR10__c</fullName>
        <label>Phone_TR10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_TR11__c</fullName>
        <label>Phone_TR11</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_TR12__c</fullName>
        <label>Phone_TR12</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>AreaCodeTranslation</label>
    <pluralLabel>AreaCodeTranslations</pluralLabel>
</CustomObject>